--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
       
       <div class="form-group">
         <label class="form-label">News Content</label>
-        <textarea class="form-input form-textarea" id="newsContent" placeholder="Write your news story here..."></textarea>
+        <textarea class="form-input form-textarea" id="news⁶Content" placeholder="Write your news story here..."></textarea>
       </div>
       
       <div class="form-group">
@@ -576,7 +576,7 @@
     <div class="print-left">
       <div class="print-header">
         <div class="print-logo-section">
-          <div class="print-logo">MK</div>
+          <div class="print-logo"> <img src="Mking.png" alt="M.KING Logo" style="width: 100%; height: 100%; object-fit: contain;"> </div>
           <div>
             <div class="print-agency-name">M.KING GLOBAL NEWS</div>
             <div class="print-agency-tagline">Premium Edition</div>
